# fastapi_celery_example

./: README.md  pyproject.toml
test_fastapi_celery/: main.py
test_fastapi_celery/worker/: celery_app.py  celery_worker.py
tests/: test_fastapi_celery.py
