[tool.poetry]
name = "test_fastapi_dramatiq"
version = "0.1.0"
description = ""
authors = ["Riccardo Massullo <riccardo.massullo@msm.io>"]

[tool.poetry.dependencies]
python = "^3.8"
dramatiq = "^1.17.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
redis = "^3.5.3"
celery = "^5.6.0"
flower = ""

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
